--- a/Messaging.TestEngine/Resources/FailureMessages.resx
+++ b/Messaging.TestEngine/Resources/FailureMessages.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Scenario_UnexpectedDomainEventCount" xml:space="preserve">
+  <data name="Scenario_NoExceptionWasThrown" xml:space="preserve">
+    <value>Expected an exception of type '{0}' but no exception was thrown whatsoever.</value>
+  </data>
+  <data name="Scenario_UnexpectedExceptionWasThrown" xml:space="preserve">
+    <value>Expected an exception of type '{0}' but an Exception of type '{1}' was thrown instead.</value>
+  </data>
+  <data name="Scenario_UnexpectedNumberOfPublishedEvents" xml:space="preserve">
     <value>The number of published events ({0}) did not match the expected amount ({1}).</value>
   </data>
 </root>
