--- a/Messaging/Resources/ValidationMessages.resx
+++ b/Messaging/Resources/ValidationMessages.resx
@@ -135,6 +135,15 @@
   <data name="Member_IsByte_Failed" xml:space="preserve">
     <value>Member '{0}' could not be converted to a byte.</value>
   </data>
+  <data name="Member_IsChar_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to a single character.</value>
+  </data>
+  <data name="Member_IsDecimal_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to a 96-bit decimal number.</value>
+  </data>
+  <data name="Member_IsDouble_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to a 64-bit floating point number.</value>
+  </data>
   <data name="Member_IsEqualTo_Failed" xml:space="preserve">
     <value>Member '{0}' is not equal to '{1}'.</value>
   </data>
@@ -146,6 +155,15 @@
   </data>
   <data name="Member_IsInstanceOf_Failed" xml:space="preserve">
     <value>Member '{0}' is not an instance of '{1}'.</value>
+  </data>
+  <data name="Member_IsInt16_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to a 16-bit integer.</value>
+  </data>
+  <data name="Member_IsInt32_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to a 32-bit integer.</value>
+  </data>
+  <data name="Member_IsInt64_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to a 64-bit integer.</value>
   </data>
   <data name="Member_IsIsRange_Failed" xml:space="preserve">
     <value>Member '{0}' is not in range of '{1}'.</value>
@@ -183,11 +201,26 @@
   <data name="Member_IsSameInstanceAs_Failed" xml:space="preserve">
     <value>Member '{0}' is not the same instance as '{1}'.</value>
   </data>
+  <data name="Member_IsSByte_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to a signed byte.</value>
+  </data>
+  <data name="Member_IsSingle_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to a 32-bit floating point number.</value>
+  </data>
   <data name="Member_IsSmallerThanOrEqualTo_Failed" xml:space="preserve">
     <value>Member '{0}' is not smaller than or equal to '{1}'.</value>
   </data>
   <data name="Member_IsSmallerThan_Failed" xml:space="preserve">
     <value>Member '{0}' is not smaller than '{1}'.</value>
+  </data>
+  <data name="Member_IsUInt16_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to an unsigned 16-bit integer.</value>
+  </data>
+  <data name="Member_IsUInt32_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to an unsigned 32-bit integer.</value>
+  </data>
+  <data name="Member_IsUInt64_Failed" xml:space="preserve">
+    <value>Member '{0}' could not be converted to an unsigned 64-bit integer.</value>
   </data>
   <data name="Member_Satisfies_Failed" xml:space="preserve">
     <value>Member '{0}' does not satisfy the specified constraint.</value>
