- Added the Length-constraints to the string member constraints. - (Temporarily) removed the And-construct because of a bug.

--- a/Messaging/Resources/ExceptionMessages.resx
+++ b/Messaging/Resources/ExceptionMessages.resx
@@ -228,4 +228,7 @@
   <data name="Aggregate_NonMatchingKey" xml:space="preserve">
     <value>The AggregateKey of the specified event ({0}) does not match the aggregate's key it is applied to ({1}).</value>
   </data>
+  <data name="StringMemberExtensions_NegativeLength" xml:space="preserve">
+    <value>A length cannot be negative: {0}.</value>
+  </data>
 </root>
