--- a/Framework/BuildingBlocks/Resources/ErrorMessages.resx
+++ b/Framework/BuildingBlocks/Resources/ErrorMessages.resx
@@ -123,22 +123,16 @@
   <data name="BooleanConstraints_IsTrue" xml:space="preserve">
     <value>{member.Name} (false) must be true.</value>
   </data>
-  <data name="CollectionConstraints_ElementAt" xml:space="preserve">
-    <value>{member.Name} ({member.Value.Count} item(s)) contains no element at index {constraint.Index}.</value>
-  </data>
   <data name="CollectionConstraints_IsNotNullOrEmpty" xml:space="preserve">
     <value>{member.Name} ({member.Value}) must not be null and contain at least one element.</value>
   </data>
   <data name="CollectionConstraints_IsNullOrEmpty" xml:space="preserve">
     <value>{member.Name} ({member.Value.Count} item(s)) must be null or empty.</value>
   </data>
-  <data name="EnumerableConstraints_ElementAt" xml:space="preserve">
+  <data name="CollectionConstraints_ElementAt_Enumerable" xml:space="preserve">
     <value>{member.Name} contains no element at index {constraint.Index}.</value>
   </data>
-  <data name="EnumerableConstraints_IsNotNullOrEmpty" xml:space="preserve">
-    <value>{member.Name} ({member.Value}) must not be null and contain at least one element.</value>
-  </data>
-  <data name="EnumerableConstraints_IsNullOrEmpty" xml:space="preserve">
+  <data name="CollectionConstraints_IsNullOrEmpty_Enumerable" xml:space="preserve">
     <value>{member.Name} must be null or empty.</value>
   </data>
   <data name="GuidConstraints_IsEmpty" xml:space="preserve">
@@ -278,5 +272,14 @@
   </data>
   <data name="StringConstraints_StartsWith" xml:space="preserve">
     <value>{member.Name} ({member.Value}) must start with '{constraint.Prefix}'.</value>
+  </data>
+  <data name="CollectionConstraints_ElementAt" xml:space="preserve">
+    <value>{member.Name} ({member.Value.Count} item(s)) contains no element at index {constraint.Index}.</value>
+  </data>
+  <data name="CollectionConstraints_NoElementAt_Enumerable" xml:space="preserve">
+    <value>{member.Name} does contain an element index {constraint.Index}.</value>
+  </data>
+  <data name="CollectionConstraints_NoElementAt" xml:space="preserve">
+    <value>{member.Name} ({member.Value.Count}) does contain an element index {constraint.Index}.</value>
   </data>
 </root>
