--- a/Framework/BuildingBlocks/Resources/ExceptionMessages.resx
+++ b/Framework/BuildingBlocks/Resources/ExceptionMessages.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CollectionConstraints_NegativeIndex" xml:space="preserve">
+    <value>Index cannot be negative: {0}.</value>
+  </data>
   <data name="ExpressionExtensions_UnsupportedExpression" xml:space="preserve">
     <value>Specified expression is not supported: '{0}'.</value>
   </data>
@@ -131,9 +134,6 @@
   </data>
   <data name="Message_AmbiguousAttributeMatch" xml:space="preserve">
     <value>Two or more attributes declared on message '{0}' are assignable to '{1}'.</value>
-  </data>
-  <data name="New_NegativeIndex" xml:space="preserve">
-    <value>Index cannot be negative: {0}.</value>
   </data>
   <data name="Range_InvalidRange" xml:space="preserve">
     <value>The specified range is not valid: {0}.</value>
