--- a/Framework/BuildingBlocks/Resources/ExceptionMessages.resx
+++ b/Framework/BuildingBlocks/Resources/ExceptionMessages.resx
@@ -132,6 +132,9 @@
   <data name="MemberSet_MemberAlreadyAdded" xml:space="preserve">
     <value>A member with name '{0}' has already been added to the set.</value>
   </data>
+  <data name="Member_ConstraintFailed" xml:space="preserve">
+    <value>Could not obtain value of child member because the constraint that provides this value failed: {0}</value>
+  </data>
   <data name="Message_AmbiguousAttributeMatch" xml:space="preserve">
     <value>Two or more attributes declared on message '{0}' are assignable to '{1}'.</value>
   </data>
